tests/expectations/parser/expression/literal/comment_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    "Error [EPAR0370014]: Empty block comment.",
    "Error [EPAR0370015]: Block comment does not close with content: `/* test`.",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '/'
    --> test:1:1
     |
   1 | / /
     | ^""",
    "Error [EPAR0370015]: Block comment does not close with content: `/*/`.",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '*'
    --> test:1:1
     |
   1 | */
     | ^""",
    """
Error [EPAR0370016]: Could not lex the following content: `🦀**/`.
""",
    """
Error [EPAR0370016]: Could not lex the following content: `🦀*/`.
""",
    "Error [EPAR0370015]: Block comment does not close with content: `/*🦀/`.",
    "Error [EPAR0370015]: Block comment does not close with content: `/**🦀`.",
    "Error [EPAR0370015]: Block comment does not close with content: `/*🦀`.",
    "Error [EPAR0370015]: Block comment does not close with content: `/*/*`.",
]
